--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
     "monitorSystem"
   ],
   "dependencies": {
-    "connect-mongo": "0.8.2",
-    "emailjs": "^1.0.4",
-    "errorhandler": "1.4.2",
-    "moment": "2.10.3",
-    "mongodb": "2.0.45",
-    "stylus": "0.52.4",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "0.8.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
     "crypto": "0.0.3",
     "ejs": "^2.5.1",
+    "emailjs": "^1.0.4",
+    "errorhandler": "1.4.2",
     "express": "^4.14.0",
     "express-flash": "0.0.2",
     "express-session": "^1.14.0",
     "log4js": "^0.6.38",
+    "moment": "2.10.3",
+    "mongodb": "2.0.45",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "q": "^1.4.1",
+    "roles": "0.0.4",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.8",
+    "stylus": "0.52.4",
+    "svg-captcha": "^1.0.4",
+    "underscore": "^1.8.3",
     "util": "^0.10.3"
   },
   "engines": {
